fixing small break in timeline

--- a/css/main.css
+++ b/css/main.css
@@ -629,7 +629,7 @@ img.timelineBuildingImage{
 .timelineContentBox{
     width: 60px;
     height: 40px;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
     position: relative;
 }
 
